# xfs4iot

./: .gitignore  CMakeLists.txt  Common.Capabilities.json  Doxyfile.in  XFS4IoT.vcxproj
Devices/CashAcceptorSample/: CashAcceptorSample.cpp  CashAcceptorSample.hpp
Devices/CashAcceptorSample/ExecuteFunctions/ExecuteCashIn/: ExecuteCashIn.cpp  ExecuteCashIn.hpp
Devices/CashAcceptorSample/ExecuteFunctions/ExecuteCashInEnd/: ExecuteCashInEnd.cpp  ExecuteCashInEnd.hpp
Devices/CashAcceptorSample/ExecuteFunctions/ExecuteCashInStart/: ExecuteCashInStart.cpp  ExecuteCashInStart.hpp
Devices/CashAcceptorSample/ExecuteFunctions/XFS3_ExecuteCashIn/: XFS3_ExecuteCashIn.cpp  XFS3_ExecuteCashIn.hpp
Devices/CashAcceptorSample/ExecuteFunctions/XFS3_ExecuteCashInEnd/: XFS3_ExecuteCashInEnd.cpp  XFS3_ExecuteCashInEnd.hpp
Devices/CashAcceptorSample/ExecuteFunctions/XFS3_ExecuteCashInRollback/: XFS3_ExecuteCashInRollback.cpp  XFS3_ExecuteCashInRollback.hpp
Devices/CashAcceptorSample/ExecuteFunctions/XFS3_ExecuteCashUnitInfo/: XFS3_ExecuteCashUnitInfo.cpp  XFS3_ExecuteCashUnitInfo.hpp
Devices/CashAcceptorSample/ExecuteFunctions/XFS3_ExecuteConfigureNoteTypes/: XFS3_ExecuteConfigureNoteTypes.cpp  XFS3_ExecuteConfigureNoteTypes.h
Devices/CashAcceptorSample/ExecuteFunctions/XFS3_ExecuteConjointCashIn/: XFS3_ExecuteConjointCashIn.cpp  XFS3_ExecuteConjointCashIn.hpp
Devices/CashAcceptorSample/ExecuteFunctions/XFS3_ExecuteConjointCashInEnd/: XFS3_ExecuteConjointCashInEnd.cpp  XFS3_ExecuteConjointCashInEnd.hpp
Devices/CashAcceptorSample/ExecuteFunctions/XFS3_ExecuteExchangeEnd/: XFS3_ExecuteExchangeEnd.cpp  XFS3_ExecuteExchangeEnd.hpp
Devices/CashAcceptorSample/ExecuteFunctions/XFS3_ExecuteExchangeStart/: XFS3_ExecuteExchangeStart.cpp  XFS3_ExecuteExchangeStart.hpp
Devices/CashAcceptorSample/ExecuteFunctions/XFS3_ExecuteReset/: XFS3_ExecuteReset.cpp  XFS3_ExecuteReset.hpp
Devices/CashAcceptorSample/ExecuteFunctions/XFS3_ExecuteSetCashInLimit/: XFS3_ExecuteSetCashInLimit.cpp  XFS3_ExecuteSetCashInLimit.hpp
Devices/CashAcceptorSample/Managers/EscrowManager/: EscrowManager.cpp  EscrowManager.hpp
Devices/CashAcceptorSample/Managers/NotesInhibitManager/: NotesInhibitManager.cpp  NotesInhibitManager.hpp
Devices/CashAcceptorSample/Managers/PowerUpManager/: PowerUpManager.cpp  PowerUpManager.hpp
Devices/HW/: Dors_210BA.cpp  Dors_210BA.h  Identification.cpp  Identification.h
Devices/HW/DevicePort/: DevicePort.cpp  DevicePort.hpp
Devices/HW/SearchDevices/: SearchDevices.cpp  SearchDevices.h
app/: XFS4IoT.cpp
compile/: xfs4iot_cpp_sp.sln
docs/: ~$кументация по XFS4IOT.docx  Документация по XFS4IOT.docx  Документация по XFS4IOT.txt
framework/Common/AsciiHexConversions/: AsciiHexConversions.cpp  AsciiHexConversions.h
framework/Common/Iso4217Currencies/: Iso4217Currencies.cpp  Iso4217Currencies.hpp
framework/ServiceClasses/: HasFlagHelper.hpp
framework/ServiceClasses/CashAcceptorServiceProvider/: CashAcceptorServiceClass.cpp  CashAcceptorServiceClass.hpp  CashAcceptorServiceProvider.cpp  CashAcceptorServiceProvider.hpp  DeviceLockStatusClass.hpp  DeviceParameters.hpp  ICashAcceptorDevice.hpp  ICashAcceptorService.hpp
framework/ServiceClasses/CashAcceptorServiceProvider/Events/: CashAcceptorEvents.hpp  CashInCommandEvents.hpp  CashInCommonCommandEvents.hpp  CashInEndEvents.hpp  (+7 more)
framework/ServiceClasses/CashManagementServiceProvider/: CashInStatus.hpp  CashInStatusClass.hpp  CashManagementServiceClass.cpp  CashManagementServiceClass.hpp  DeviceParameters.hpp  ICashManagementDevice.hpp  ICashManagementService.hpp  ItemClassificationClass.hpp
framework/ServiceClasses/CommonServiceProvider/: CashAcceptorCapabilitiesClass.hpp  CashAcceptorStatusClass.hpp  CashManagementCapabilitiesClass.hpp  CashManagementStatusClass.hpp  CommonCapabilitiesClass.hpp  CommonServiceClass.cpp  CommonServiceClass.hpp  CommonStatusClass.hpp  DeviceParameters.hpp  ICommonDevice.hpp  ICommonService.hpp  StatusBase.hpp
framework/ServiceClasses/StorageServiceProvider/: CashManagementPresentStatus.hpp  CashUnit.hpp  DeviceParameters.hpp  IStorageDevice.hpp  IStorageService.hpp  StorageChangedBase.hpp  StorageServiceClass.cpp  StorageServiceClass.hpp  UnitStorageBase.hpp
framework/core/: Acknowledge.hpp  Attributes.hpp  Command.hpp  Completion.hpp  Configurations.hpp  Contracts.hpp  Events.hpp  Exceptions.hpp  ICloneable.hpp  IMessageDecoder.hpp  JsonHelpers.hpp  Message.hpp  MessageBase.hpp  MessageDecoder.hpp  MessageRegistry.hpp  MessageTypeInfo.hpp  Validation.hpp
framework/core/CashAcceptor/: CashAcceptorSchemas.hpp  CashInCompletion.hpp  CashInEndCompletion.hpp  CashInRollbackCompletion.hpp  CashUnitCountCompletion.hpp  ConfigureNoteReaderCompletion.hpp  DeviceLockControlCompletion.hpp  PreparePresentCompletion.hpp  PresentMediaCompletion.hpp
framework/core/CashManagement/: CashManagementSchemas.hpp
framework/core/Events/: PropertyChangedEventArgs.hpp
framework/core/JSON/: JsonExtensions.hpp
framework/core/Logger/: ConsoleLogger.hpp  ILogger.hpp  LoggerLevels.hpp  LoggerRotate.hpp  LoggerSpdlog.hpp
framework/core/Persistent/: FilePersistentData.hpp  IPersistentData.hpp  PersistentDatasHandler.cpp  PersistentDatasHandler.hpp
framework/core/ServicePublisher/: ServiceClass.hpp
framework/core/SettingModule/: SettingModule.cpp  SettingModule.h
framework/core/Storage/: StorageSchemas.hpp
framework/core/common/: CommonSchemas.hpp  MessageHeader.hpp  XFSConstants.hpp
framework/server/: CancellationSource.hpp  ClientConnection.cpp  ClientConnection.hpp  CommandDispatcher.cpp  CommandDispatcher.hpp  CommandQueue.cpp  CommandQueue.hpp  DeviceResult.hpp  EndPoint.cpp  EndPoint.hpp  EndpointDetails.hpp  GetServiceHandler.cpp  GetServiceHandler.hpp  ICommandDispatcher.hpp  ICommandHandler.hpp  IConnection.hpp  IDevice.hpp  IDisposable.hpp  IJsonSchemaValidator.hpp  IServiceConfiguration.hpp  IServiceProvider.hpp  JsonSchemaValidator.hpp  ServiceConfiguration.cpp  ServiceConfiguration.hpp  ServiceProvider.hpp  ServicePublisher.cpp  ServicePublisher.hpp  VersionNegotiationHelper.hpp
(+124 files in other folders)
